[tool.poetry]
name = "mcame"
version = "0.0.1"
description = "A Minecraft game framework."
authors = ["Kzi368 <casiel.joshua@gmail.com>"]
license = "MIT"

homepage = "https://github.com/Kzi368/mcgame"
readme = "README.md"

keywords = [
  "beet",
  "bolt",
  "minecraft",
  "minecraft-commands",
  "mcfunction",
]

include = ["mcgame/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
beet = ">=0.79.0"
mecha = ">=0.57.4"
bolt = ">=0.19.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^23.1.0"
isort = "^5.10.1"
pytest-insta = "^0.1.11"
lectern = ">=0.25.0"
python-semantic-release = "^7.32.1"

[tool.pytest.ini_options]
addopts = "tests --import-mode=importlib"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = "mcgame/__init__.py:__version__"
version_toml = "pyproject.toml:tool.poetry.version"
major_on_zero = false
upload_to_repository = false
build_command = "poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
